--- a/src/shared/components/review/styles.module.scss
+++ b/src/shared/components/review/styles.module.scss
@@ -13,7 +13,6 @@
   right: -750px;
   top: 0;
 
-  z-index: 10000;
   transition: right .25s;
 
   &.visible {
@@ -33,7 +32,7 @@
     gap: 7.5px;
 
     h3 {
-      font-size: 2.75em;
+      font-size: 3.0em;
       color: $text-color;
     }
 
@@ -51,5 +50,9 @@
       font-size: 2.15em;
       font-weight: 300;
     }
+  }
+
+  @media (max-width: 1000px) {
+    max-width: 100%;
   }
 }
